--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,6 +21,7 @@ jobs:
          ping google.com
          nslookup google.com 8.8.8.8
          nslookup google.com 1.1.1.1
+         nslookup google.com 208.67.222.222
 
      - name: Setup Python & Poetry Environment
        uses: exasol/python-toolbox/.github/actions/python-environment@0.14.0
