--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,7 +18,7 @@ jobs:
 
      - name: Validate Nameserver
        run: |
-         ping google.com
+         ping -c 3 google.com
          nslookup google.com 8.8.8.8
          nslookup google.com 1.1.1.1
          nslookup google.com 208.67.222.222
