--- a/.github/actions/prepare_test_env/action.yml
+++ b/.github/actions/prepare_test_env/action.yml
@@ -21,8 +21,12 @@ runs:
      shell: bash
 
    - name: Show available disk space
-     run: df -h
      shell: bash
+     run: df -h
+
+   - name: Allow unprivileged user namespaces
+     shell: bash
+     run: sudo sysctl -w kernel.apparmor_restrict_unprivileged_userns=0
 
    - name: Setup Python & Poetry Environment
      uses: exasol/python-toolbox/.github/actions/python-environment@0.14.0
