Drop path in bucket param

--- a/exasol/ds/sandbox/templates/cloudformation/example-data-s3/s3-bucket.jinja.yaml
+++ b/exasol/ds/sandbox/templates/cloudformation/example-data-s3/s3-bucket.jinja.yaml
@@ -17,7 +17,7 @@ Resources:
               - 's3:GetObject'
             Principal: "*"
             Resource:
-              - !Sub "arn:aws:s3:::${ AiLabExampleS3DataBucket }/{{path_in_bucket}}/*"
+              - !Sub "arn:aws:s3:::${ AiLabExampleS3DataBucket }/*"
 
 Outputs:
   {{BucketId}}:
