Use static name

--- a/exasol/ds/sandbox/templates/cloudformation/example-data-s3/s3-bucket.jinja.yaml
+++ b/exasol/ds/sandbox/templates/cloudformation/example-data-s3/s3-bucket.jinja.yaml
@@ -6,6 +6,7 @@ Resources:
     DeletionPolicy: Retain
     UpdateReplacePolicy : Retain
     Properties:
+      BucketName: ai-lab-example-data-s3
       PublicAccessBlockConfiguration:
         BlockPublicAcls: false
         BlockPublicPolicy: false
