Rename template class

--- a/exasol/ds/sandbox/templates/cloudformation/example-data-s3/s3-bucket.jinja.yaml
+++ b/exasol/ds/sandbox/templates/cloudformation/example-data-s3/s3-bucket.jinja.yaml
@@ -144,7 +144,7 @@ Resources:
               - Effect: Allow
                 Action:
                   - s3:PutBucketPublicAccessBlock
-                Resource: !Sub "${AiLabExampleS3DataBucket}"
+                Resource: !Sub "arn:aws:s3:::${AiLabExampleS3DataBucket}"
 
   LambdaFunction:
     Type: AWS::Lambda::Function
