--- a/.github/workflows/notebook_tests.yaml
+++ b/.github/workflows/notebook_tests.yaml
@@ -4,8 +4,8 @@ on:
   workflow_call:
 
 jobs:
-  notebook_tests:
-    environment: AWS_SAGEMAKER
+  notebook_tests-normal-runner:
+    environment: AWS_CI_TESTS
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -20,6 +20,7 @@ jobs:
           - { name: "TE notebooks onprem", test_file: "nbtest_transformers.py", test_backend: "onprem" }
           - { name: "TE notebooks saas", test_file: "nbtest_transformers.py", test_backend: "saas"}
           - { name: "short notebook tests", test_file: "\"nbtest_environment_test.py nbtest_itde.py\"", test_backend: ""}
+          - { name: "TXAIE notebooks saas", test_file: "nbtest_text_ai", test_backend: "saas"}
     name: Running ${{ matrix.nb_test.name }}
     steps:
       - uses: actions/checkout@v4
@@ -44,6 +45,37 @@ jobs:
           NBTEST_AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           NBTEST_AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY_SECRET }}
           NBTEST_AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
-          NBTEST_ZIP_URL: ${{ vars.ZIP_PASSWORD }}
-          NBTEST_ZIP_PASSWORD: ${{ secrets.ZIP_PASSWORD }}
+          NBTEST_TXAIE_ZIP_URL: ${{ vars.TXAIE_ZIP_URL }}
+          NBTEST_ZIP_PASSWORD: ${{ secrets.TXAIE_ZIP_PASSWORD }}
+          PROJECT_SHORT_TAG: XAIL-NB
+
+  notebook_tests-large-runner:
+    environment: AWS_CI_TESTS
+    runs-on:
+      labels: int-linux-x64-4core-ubuntu24.04-1
+    strategy:
+      fail-fast: false
+      matrix:
+        nb_test:
+          - { name: "TXAIE notebooks onprem", test_file: "nbtest_text_ai", test_backend: "onprem"}
+    name: Running ${{ matrix.nb_test.name }}
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - uses: ./.github/actions/prepare_test_env/
+
+      - name: Run notebook tests
+        run: |
+          poetry run pytest \
+            --capture=no \
+            --override-ini=log_cli=true \
+            --override-ini=log_cli_level=INFO \
+            --nb-test-backend=${{ matrix.nb_test.test_backend }} \
+            --nb-test-file=${{ matrix.nb_test.test_file }} \
+            test/notebook_test_runner/test_notebooks_in_dss_docker_image.py
+        env:
+          NBTEST_TXAIE_ZIP_URL: ${{ vars.TXAIE_ZIP_URL }}
+          NBTEST_ZIP_PASSWORD: ${{ secrets.TXAIE_ZIP_PASSWORD }}
           PROJECT_SHORT_TAG: XAIL-NB
