--- a/.github/workflows/hyperlinks.yaml
+++ b/.github/workflows/hyperlinks.yaml
@@ -6,7 +6,7 @@ on:
 jobs:
   check-links:
     name: Find Broken Links in Documentation and Jupyter Notebooks
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
 
      - uses: actions/checkout@v4
