--- a/.github/workflows/notebook_tests.yaml
+++ b/.github/workflows/notebook_tests.yaml
@@ -6,7 +6,7 @@ on:
 jobs:
   notebook_tests:
     environment: AWS_SAGEMAKER
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     strategy:
       fail-fast: false
       matrix:
