--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -11,7 +11,7 @@ jobs:
 
   build_and_upload:
     environment: AWS_CI_TESTS
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
     - uses: actions/checkout@v4
 
