--- a/.github/workflows/release_droid_upload_github_release_assets.yml
+++ b/.github/workflows/release_droid_upload_github_release_assets.yml
@@ -20,7 +20,7 @@ jobs:
           python-version: "3.10"
           poetry-version: '1.8.5'
       - name: Build Release
-        run: poetry run python3 -u "./scripts/build/check_release.py"
+        run: poetry run -- python3 -u "./scripts/build/check_release.py"
 
   upload:
     needs: check-release
@@ -35,7 +35,7 @@ jobs:
           python-version: "3.10"
           poetry-version: '1.8.5'
       - name: Build Release
-        run: poetry run python3 -m exasol.ds.sandbox.main start-release-build --upload-url "${{ github.event.inputs.upload_url }}" --branch "$GITHUB_REF"
+        run: poetry run -- python3 -m exasol.ds.sandbox.main start-release-build --upload-url "${{ github.event.inputs.upload_url }}" --branch "$GITHUB_REF"
         env: # Set the secret as an env variable
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY_SECRET }}
