--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/defaults/main.yml
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/defaults/main.yml
@@ -15,3 +15,4 @@ jupyterlab_notebook_folder: "{{ user_home }}/notebooks"
 apt_dependencies:
   - virtualenv=20.13.0+ds-2
   - git=1:2.34.1-1ubuntu1.12
+  - unzip=6.0-26ubuntu3.2
