--- a/.github/workflows/notebook_tests.yaml
+++ b/.github/workflows/notebook_tests.yaml
@@ -74,6 +74,7 @@ jobs:
             --override-ini=log_cli_level=INFO \
             --nb-test-backend=${{ matrix.nb_test.test_backend }} \
             --nb-test-file=${{ matrix.nb_test.test_file }} \
+            --nb-test-db-mem-size="8 GiB" \
             test/notebook_test_runner/test_notebooks_in_dss_docker_image.py
         env:
           NBTEST_TXAIE_ZIP_URL: ${{ vars.TXAIE_ZIP_URL }}
