--- a/exasol/ds/sandbox/runtime/ansible/ai_lab_docker_playbook.yml
+++ b/exasol/ds/sandbox/runtime/ansible/ai_lab_docker_playbook.yml
@@ -36,7 +36,7 @@
     docker_group: docker
     user_home: /home/jupyter
     initial_notebook_folder: "{{ user_home }}/notebook-defaults"
-    work_in_progress_notebooks: {{work_in_progress_notebooks}}
+    work_in_progress_notebooks: "{{ work_in_progress_notebooks }}"
     need_sudo: yes
     docker_integration_test: true
   tasks:
