--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.10.0,<4.0"
+python = ">=3.10.0,<3.13" # we are currently using crypt, which was removed in Python 3.13
 click = "^8.1.3"
 boto3 = "^1.22.0"
 jinja2 = ">=3.1.6"
