#376: Added support for custom AWS EC2 instance types, e.g. g4dn.xlarge
Updated
* API and tests
* CLI
* user and developer guide
* Changelog

Enhanced Test case with localstack
Added CLI as script to pyproject.toml

--- a/exasol/ds/sandbox/templates/ec2_cloudformation.jinja.yaml
+++ b/exasol/ds/sandbox/templates/ec2_cloudformation.jinja.yaml
@@ -26,7 +26,7 @@ Resources:
       Properties:
           ImageId: {{ami_id}}
           KeyName: {{key_name}}
-          InstanceType: "t2.medium"
+          InstanceType: {{instance_type}}
           SecurityGroups:
           - !Ref Ec2SecurityGroup
           BlockDeviceMappings:
