--- a/.github/workflows/notebook_tests.yaml
+++ b/.github/workflows/notebook_tests.yaml
@@ -3,28 +3,17 @@ name: Notebook Tests
 on:
   workflow_call:
 
+
 jobs:
-  notebook_tests-normal-runner:
-    environment: AWS_SAGEMAKER
+  notebook-tests-docker-image-builder:
     runs-on: ubuntu-24.04
     strategy:
       fail-fast: false
       matrix:
-        nb_test:
-          - { name: "CSE notebook", test_file: "nbtest_cloud.py", test_backend: "onprem" }
-#          - { name: "CSE notebook", test_file: "nbtest_cloud.py", test_backend: "saas" }
-          - { name: "sklearn notebook", test_file: "nbtest_sklearn.py", test_backend: "onprem" }
-#          - { name: "sklearn notebook", test_file: "nbtest_sklearn.py", test_backend: "saas" }
-          - { name: "ibis notebook", test_file: "nbtest_ibis.py", test_backend: "onprem" }
-#          - { name: "ibis notebook", test_file: "nbtest_ibis.py", test_backend: "saas" }
-          - { name: "SLC notebook", test_file: "nbtest_script_languages_container.py", test_backend: "onprem" }
-          - { name: "SME notebooks onprem", test_file: "nbtest_sagemaker.py", test_backend: "onprem" }
-#          - { name: "SME notebooks saas", test_file: "nbtest_sagemaker.py", test_backend: "saas" }
-          - { name: "TE notebooks onprem", test_file: "nbtest_transformers.py", test_backend: "onprem" }
-#          - { name: "TE notebooks saas", test_file: "nbtest_transformers.py", test_backend: "saas"}
-          - { name: "short notebook tests", test_file: "\"nbtest_environment_test.py nbtest_itde.py\"", test_backend: ""}
-#          - { name: "TXAIE notebooks saas", test_file: "nbtest_text_ai.py", test_backend: "saas"}
-    name: Running ${{ matrix.nb_test.name }}
+        wip: [no-wip, wip]
+    name: Running Build Docker image - ${{ matrix.wip }}
+    env:
+      DOCKER_TAG:"${{ matrix.wip }}-${{ github.sha }}"
     steps:
       - uses: actions/checkout@v4
         with:
@@ -34,12 +23,71 @@ jobs:
 
       - name: Run notebook tests
         run: |
+            additional_options=""
+            if [[ "${{ matrix.wip }}" == "wip" ]]; then
+              additional_options="--work-in-progress-notebooks"
+            fi
+            poetry run ai-lab create-docker-image --version "$DOCKER_TAG" --log-level info $additional_options
+      - name: Export docker image
+        run: docker save -o "./ai-lab-$DOCKER_TAG.tar" "exasol/ai-lab:$DOCKER_TAG"
+
+      - uses: actions/upload-artifact@v4
+        name: Upload ai-lab docker image
+        with:
+          name: "ai-lab-${{ matrix.wip }}-${{ github.sha }}"
+          path: "./ai-lab-${{ matrix.wip }}-${{ github.sha }}"
+          compression-level: 9
+          retention-days: 1
+
+  notebook_tests-normal-runner:
+    environment: AWS_SAGEMAKER
+    runs-on: ubuntu-24.04
+    env:
+      DOCKER_TAG:"${{ matrix.wip }}-${{ github.sha }}"
+    strategy:
+      fail-fast: false
+      matrix:
+        nb_test:
+          - { name: "CSE notebook", test_file: "nbtest_cloud.py", test_backend: "onprem", wip: "no-wip" }
+#          - { name: "CSE notebook", test_file: "nbtest_cloud.py", test_backend: "saas", wip: "no-wip" }
+          - { name: "sklearn notebook", test_file: "nbtest_sklearn.py", test_backend: "onprem", wip: "no-wip" }
+#          - { name: "sklearn notebook", test_file: "nbtest_sklearn.py", test_backend: "saas", wip: "no-wip" }
+          - { name: "ibis notebook", test_file: "nbtest_ibis.py", test_backend: "onprem", wip: "no-wip" }
+#          - { name: "ibis notebook", test_file: "nbtest_ibis.py", test_backend: "saas", wip: "no-wip" }
+          - { name: "SLC notebook", test_file: "nbtest_script_languages_container.py", test_backend: "onprem", wip: "no-wip" }
+          - { name: "SME notebooks onprem", test_file: "nbtest_sagemaker.py", test_backend: "onprem", wip: "no-wip" }
+#          - { name: "SME notebooks saas", test_file: "nbtest_sagemaker.py", test_backend: "saas", wip: "no-wip" }
+          - { name: "TE notebooks onprem", test_file: "nbtest_transformers.py", test_backend: "onprem", wip: "no-wip" }
+#          - { name: "TE notebooks saas", test_file: "nbtest_transformers.py", test_backend: "saas", wip: "no-wip"}
+          - { name: "short notebook tests", test_file: "\"nbtest_environment_test.py nbtest_itde.py\"", test_backend: "", wip: "no-wip"}
+#          - { name: "TXAIE notebooks saas", test_file: "nbtest_text_ai.py", test_backend: "saas", wip: "no-wip"}
+    name: Running ${{ matrix.nb_test.name }}
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - uses: ./.github/actions/prepare_test_env/
+
+      - name: Download ai-lab image ${{matrix.wip}}
+        id: download-image
+        uses: actions/download-artifact@v4
+        with:
+          name: "ai-lab-${{ matrix.wip }}-${{ github.sha }}"
+          path: "."
+
+      - name: Load ai-lab image ${{matrix.wip}}
+        run: docker load -i "./ai-lab-$DOCKER_TAG.tar"
+
+      - name: Run notebook tests
+        run: |
           poetry run -- pytest \
             --capture=no \
             --override-ini=log_cli=true \
             --override-ini=log_cli_level=INFO \
             --nb-test-backend=${{ matrix.nb_test.test_backend }} \
             --nb-test-file=${{ matrix.nb_test.test_file }} \
+            --dss-docker-image="exasol/ai-lab:$DOCKER_TAG" \
             test/notebook_test_runner/test_notebooks_in_dss_docker_image.py
         env:
           SAAS_HOST: ${{ secrets.INTEGRATION_TEAM_SAAS_STAGING_HOST }}
@@ -54,6 +102,8 @@ jobs:
 
   notebook_tests-large-runner:
     environment: AWS_SAGEMAKER
+    env:
+      DOCKER_TAG:"${{ matrix.wip }}-${{ github.sha }}"
     runs-on:
       labels: int-linux-x64-4core-ubuntu24.04-1
     strategy:
@@ -69,6 +119,16 @@ jobs:
 
       - uses: ./.github/actions/prepare_test_env/
 
+      - name: Download ai-lab image ${{matrix.wip}}
+        id: download-image
+        uses: actions/download-artifact@v4
+        with:
+          name: "ai-lab-${{ matrix.wip }}-${{ github.sha }}"
+          path: "."
+
+      - name: Load ai-lab image ${{matrix.wip}}
+        run: docker load -i "./ai-lab-$DOCKER_TAG.tar"
+
       - name: Run notebook tests
         run: |
           poetry run pytest \
@@ -78,6 +138,7 @@ jobs:
             --nb-test-backend=${{ matrix.nb_test.test_backend }} \
             --nb-test-file=${{ matrix.nb_test.test_file }} \
             --nb-test-db-mem-size="8 GiB" \
+            --dss-docker-image="exasol/ai-lab:$DOCKER_TAG" \
             test/notebook_test_runner/test_notebooks_in_dss_docker_image.py
         env:
           NBTEST_TXAIE_ZIP_URL: ${{ vars.TXAIE_ZIP_URL }}
